Checkpoint rails movement and basic track drawing

--- a/MineKart/MineKart.csproj
+++ b/MineKart/MineKart.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RailsMovementComponent.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="GameScene.cs" />
     <Compile Include="GameSettings.cs" />
@@ -86,10 +87,25 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\hole-entering.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\hole-exiting.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\hole.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\segment.png">
+    <Content Include="Assets\track-breaking.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\track-fixing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\track.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
