--- a/SdlEngine/SdlEngine.csproj
+++ b/SdlEngine/SdlEngine.csproj
@@ -74,6 +74,7 @@
     <Compile Include="GraphicsManager.cs" />
     <Compile Include="BasicMovementComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quadtree.cs" />
     <Compile Include="Rect3.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="Scene.cs" />
