--- a/MineKart/MineKart.csproj
+++ b/MineKart/MineKart.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MyGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrackCollisionHandlerComponent.cs" />
     <Compile Include="TrackGeneratorComponent.cs" />
     <Compile Include="TrackSegmentComponent.cs" />
     <Compile Include="TrackSegmentDrawableComponent.cs" />
