--- a/SdlEngine/SdlEngine.csproj
+++ b/SdlEngine/SdlEngine.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Collider.cs" />
     <Compile Include="ColliderComponent.cs" />
+    <Compile Include="CollisionHandlerComponent.cs" />
     <Compile Include="CollisionSystem.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="Component.cs" />
