--- a/MineKart/MineKart.csproj
+++ b/MineKart/MineKart.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PauseGameComponent.cs" />
     <Compile Include="RailsMovementComponent.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="GameScene.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="MyGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrackCollisionHandlerComponent.cs" />
+    <Compile Include="PlayerCollisionHandlerComponent.cs" />
     <Compile Include="TrackGeneratorComponent.cs" />
     <Compile Include="TrackSegmentComponent.cs" />
     <Compile Include="TrackSegmentDrawableComponent.cs" />
@@ -88,6 +89,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\endscreen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\hole-entering.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -97,7 +101,13 @@
     <Content Include="Assets\hole.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\pausescreen.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\player.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\startscreen.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\track-breaking.png">
