--- a/SdlEngine/SdlEngine.csproj
+++ b/SdlEngine/SdlEngine.csproj
@@ -74,6 +74,7 @@
     <Compile Include="GameObjectCollection.cs" />
     <Compile Include="GraphicsManager.cs" />
     <Compile Include="BasicMovementComponent.cs" />
+    <Compile Include="PauseGameComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quadtree.cs" />
     <Compile Include="Rect3.cs" />
@@ -86,10 +87,11 @@
     <Compile Include="SDL2-CS\SDL2_mixer.cs" />
     <Compile Include="SDL2-CS\SDL2_ttf.cs" />
     <Compile Include="ServiceLocator.cs" />
-    <Compile Include="SplashScreenScene.cs" />
     <Compile Include="SpriteComponent.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="Time.cs" />
+    <Compile Include="KeyDelayScene.cs" />
+    <Compile Include="TimeDelayScene.cs" />
     <Compile Include="TransformComponent.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Vector3.cs" />
