--- a/SdlEngine/SdlEngine.csproj
+++ b/SdlEngine/SdlEngine.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Rect3.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="Scene.cs" />
-    <Compile Include="SceneStateMachine.cs" />
+    <Compile Include="SceneManager.cs" />
     <Compile Include="SDL2-CS\LPUtf8StrMarshaler.cs" />
     <Compile Include="SDL2-CS\SDL2.cs" />
     <Compile Include="SDL2-CS\SDL2_image.cs" />
