--- a/MineKart/MineKart.csproj
+++ b/MineKart/MineKart.csproj
@@ -55,9 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnemySpawnerComponent.cs" />
-    <Compile Include="EnemyMovementComponent.cs" />
     <Compile Include="ExplosionSpawnerComponent.cs" />
-    <Compile Include="AcceleratedMovementComponent.cs" />
     <Compile Include="RailsMovementComponent.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="GameScene.cs" />
@@ -66,6 +64,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlayerCollisionHandlerComponent.cs" />
+    <Compile Include="RangedDestroyComponent.cs" />
+    <Compile Include="TrackAlignmentComponent.cs" />
     <Compile Include="TrackCollection.cs" />
     <Compile Include="TrackGeneratorComponent.cs" />
     <Compile Include="TrackSegmentComponent.cs" />
@@ -93,6 +93,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\cliff.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\endscreen.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -124,6 +127,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\track.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\warning.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
