Add support for an explosion concept where a texture is chopped up and sent flying

--- a/MineKart/MineKart.csproj
+++ b/MineKart/MineKart.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnemySpawnerComponent.cs" />
+    <Compile Include="SubdividingExplosionComponent.cs" />
     <Compile Include="ExplosionSpawnerComponent.cs" />
     <Compile Include="RailsMovementComponent.cs" />
     <Compile Include="CommandLineOptions.cs" />
